[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["scraper/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[project]
name = "docker-pydoll-fusion"
version = "1.0.0"
description = "A stealthy web scraper fusing Pydoll with Docker Chrome"
authors = [
    {name = "Ravikant Saraf"}
]
requires-python = ">=3.10"
dependencies = [
    "pydoll>=1.0.0",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
scraper = "main:main"
